--- a/notebooks/end2end_rl_local_control_example.ipynb
+++ b/notebooks/end2end_rl_local_control_example.ipynb
@@ -6,7 +6,7 @@
         "id": "djXLDIS0zCBo"
       },
       "source": [
-        "#### note: change to a GPU runtime type"
+        "#### note: change to a GPU runtime type, if using google colab"
       ]
     },
     {
