--- a/notebooks/sade_adam_local_control_example.ipynb
+++ b/notebooks/sade_adam_local_control_example.ipynb
@@ -1115,7 +1115,7 @@
         "    selected_atoms=[0, 1, 2]\n",
         "\n",
         "    # Crosstalk flag\n",
-        "    enable_crosstalk = False  # Set to True to enable crosstalk\n",
+        "    enable_crosstalk = True  # Set to True to enable crosstalk\n",
         "\n",
         "    if enable_crosstalk:\n",
         "        # Inter-channel waveguide distances\n",
